Completed landing page. Ready for additional pages and links to be added in. This now has a collapsible menu that turns into hamburger menu, photo, title bar, and link to social with icon.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">AR Logo</div>
+        <div class="logo">AR Events</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -19,5 +19,39 @@
             </ul>
         </div>
     </nav>
+    <nav id="hamburger-nav">
+        <div class="logo">AR Events</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#pricing" onclick="toggleMenu()">Pricing</a></li>
+                <li><a href="#portfolio" onclick="toggleMenu()">Portfolio</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+            </div>
+        </div>
+    </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/cat.png" alt="cat picture"/>
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello I'm...</p>
+            <h1 class="title">A CAT</h1>
+            <p class="section__text__p2">a silly cat</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Us</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/insta.png" alt="Instagram Profile" class="icon" onclick="location.href='https://www.instagram.com/angelina.richardson.events/'"/>
+            </div>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
