--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -84,110 +84,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'"/>
-    </section>
-    <section id="experience">
-        <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Type of Experience</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                                                <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="experience-sub-title">Type of Experience</h2>
-                    <div class="article-container">
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                                                <article>
-                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'"/>
+        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='#projects'"/>
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
@@ -230,7 +127,110 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
+        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='#pricing'"/>
+    </section>
+    <section id="pricing">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="pricing-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="pricing-sub-title">Type of Experience</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                                                <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Type of Experience</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                                                <article>
+                            <img src="./assets/angle-down.png" alt="check mark png" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/angle-down.png" alt="arrow icon" class="icon arrow" onclick="location.href='#contact'"/>
     </section>
     <section id="contact">
         <p class="section__text__p1">Get in touch</p>
@@ -264,8 +264,8 @@
                 <div class="nav-links">
                     <ul class="nav-links">
                         <li><a href="#about">About</a></li>
+                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
